# memlayer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.migration-test.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  install.sh  memlayer-client.conf.example  setup_client.sh  setup_cloud_hosted.sh  setup_server.sh  uninstall.sh
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.planning/: DESIGN.md  IDEA.md  PLAN.md
.planning/research/: SUMMARY.md  deployment-patterns.md  existing-infra.md
.semver/: config.yaml
.semver/hooks/post-bump/: 00-sync-version.sh  01-deploy-fly.sh
.storyhook/: CLAUDE.md  project.toml
cli/: package-lock.json  package.json
cli-rs/: Cargo.toml
cli-rs/src/: main.rs
cli-rs/src/commands/: dashboard.rs  entities.rs  entity.rs  graph.rs  mod.rs  read_file.rs  recent.rs  rollback.rs  search.rs  session.rs  sessions.rs  status.rs  update.rs
cli-rs/src/commands/plugin/: claude_code.rs  codex.rs  common.rs  gemini.rs  mod.rs
cli-rs/src/format/: entities.rs  entity.rs  error.rs  mod.rs  read_file.rs  recent.rs  search.rs  session.rs  sessions.rs  status.rs
cli-rs/src/tui/: app.rs  event.rs  mod.rs  sse.rs
cli-rs/src/tui/tabs/: browse.rs  graph.rs  live.rs  mod.rs  search.rs  stats.rs
cli-rs/src/tui/widgets/: entry_detail.rs  list_nav.rs  mod.rs
cli/src/: api-client.ts  cli-formatters.ts  cli.ts  file-cache.ts  format.ts
cli/src/__tests__/: api-client.test.ts  cli-integration.test.ts  cli.test.ts
daemon/: Cargo.toml
daemon/src/: config.rs  cursor.rs  main.rs  migration.rs  parser.rs  queue.rs  sender.rs  updater.rs  watcher.rs
db/: init.sh
db/migrations/: 002_tables.sql  003_indexes.sql  004_functions.sql  005_response_files.sql  006_migration_tracking.sql  007_embedding_metadata.sql  008_search_filters.sql  009_migration_state.sql  010_browse_index.sql  011_knowledge_graph.sql  012_graph_search_function.sql  013_schema_meta.sql  014_missing_indexes.sql  015_row_level_security.sql
deploy/: Dockerfile.cloud  fly-deploy.sh
docs/: architecture.md  cli-reference.md  cli-tools.md  cloud-setup.md  configuration.md  development.md  getting-started.md  migration.md  troubleshooting.md  uninstalling.md  upgrading.md  vps-setup.md
mcp/: package-lock.json  package.json
mcp/src/: api-client.ts  file-cache.ts  format.ts  index.ts
mcp/src/__tests__/: file-cache.test.ts  tools.test.ts
memlayer-common/: Cargo.toml
memlayer-common/src/: api_types.rs  client.rs  config.rs  file_cache.rs  lib.rs
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  memory-read-hook.sh
plugin/skills/graph/: SKILL.md
plugin/skills/health/: SKILL.md
plugin/skills/memory/: SKILL.md
plugin/skills/recall/: SKILL.md
scripts/: backup.sh  claude-mem-daemon.service.template  claude-memory.claudemd.template  container-boot.sh  io.memlayer.daemon.plist.template  lib.sh  memlayer-server.sh  memlayer.claudemd.template  memlayer.sh  setup_cloud.sh  sync-version.sh
server/: Dockerfile  pyproject.toml
server/src/: analytics.py  config.py  db.py  embeddings.py  event_bus.py  eviction.py  file_storage.py  main.py  migration_state.py  migrator.py  models.py  notifications.py  rate_limit.py  retention.py  version.py
server/src/extraction/: __init__.py  entity_resolver.py  llm_extract.py  worker.py
server/src/indexing/: __init__.py  detect.py  heuristic.py  llm_index.py  summarize.py
server/src/routes/: browse.py  embeddings.py  files.py  graph.py  ingest.py  migration.py  search.py  stats.py  stream.py  version.py
server/static/: index.html
server/tests/: conftest.py  test_analytics.py  test_api.py  test_config.py  test_embeddings.py  test_file_storage.py  test_hardening.py  test_indexing.py  test_migration.py  test_migration_flow.py  test_models.py
skill/: memory.md
specs/: 0.1.0.md  0.1.0.txt  0.3.0.md  1.4.0_progress.md  prd.txt  roadmap.md  roadmap_update_progress.md
tests/: e2e-edge-cases.sh  e2e-migration.sh  e2e-ollama.sh  e2e.sh
tests/fixtures/: edge-case-entries.json  real-entries.json
website/: package-lock.json
website/src/layouts/: Base.astro
website/src/pages/: download.astro  index.astro
website/src/pages/docs/: architecture.astro  cloud-setup.astro  digitalocean-setup.astro  getting-started.astro  vps-setup.astro
