[package]
name = "claude-mem-daemon"
version = "1.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "8"
notify-debouncer-full = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hostname = "0.4"
glob = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
wiremock = "0.6"
